k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: willow
    labels:
      app: willow
spec:
    replicas: 2
    selector:
      matchLabels:
        app: willow
    template:
      metadata:
        labels:
            app: willow
      spec:
        containers:
          - name: willow
            image: vaishvik7568/willow
            ports:
              - containerPort: 80
            resources:
              limits:
                memory: '128Mi'
                cpu: '200m'
            livenessProbe:
              httpGet:
                path: /index.html
                port: 80
              initialDelaySeconds: 15
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 1
            readinessProbe:
              httpGet:
                path: /index.html
                port: 80
              initialDelaySeconds: 15
              periodSeconds: 5
              failureThreshold: 1
